@@ -9,6 +9,7 @@ pydantic_imports = """from pydantic import {imports}"""
 pydantic_class = """class {class_name}(BaseModel):"""
 pydantic_attr = """    {arg_name}: {type}"""
 pydantic_optional_attr = """    {arg_name}: Optional[{type}]"""
+pydantic_default_attr = """ = {default}"""
 
 enum_class = """class {class_name}({sub_type}):"""
 enum_value = """    {name} = {value}"""
