@@ -4,7 +4,8 @@
 2. Added defaults for Pydantic models
 3. Added flag to generate Pydantic & Dataclass models WITHOUT defaults `defaults_off=True` (by default it is False).
 4. Fixed issue with Enum types with lower case names in DDLs
-5. Fixed several issues with Dataclass  generation (default with datetime & Enums)
+5. Fixed several issues with Dataclass generation (default with datetime & Enums)
+6. '"' do not remove from defaults now
 
 **v0.6.0**
 1. O!MyModels now also can generate python Dataclass from DDL. Use argument models_type='dataclass' or if you use the cli flag --models_type dataclass or -m dataclass
